updated java, added css page

--- a/amazonpricechecker.html
+++ b/amazonpricechecker.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Price Checker</title>
 </head>
-<style>
-    body {
-        background-color: blue;
-        border: 5px black solid ;
-    }
-</style>
 <body>
-    <h1>Amazon Price Checker</h1>
+    <div class="header">
+        <h1>Amazon Price Checker</h1>
+    </div>
     
+
+    <script src="amazon.js"></script>   
 </body>
-<script src="amazon.js"></script>
 </html>
