tried to add functions

--- a/amazonpricechecker.html
+++ b/amazonpricechecker.html
@@ -7,11 +7,11 @@
     <title>Amazon Price Checker</title>
 </head>
 <body>
+    
     <div class="header">
         <h1>Amazon Price Checker</h1>
     </div>
     
-
-    <script src="amazon.js"></script>   
+    <script src="script.js"></script>   
 </body>
 </html>
